[gd_scene load_steps=8 format=2]

[ext_resource path="res://menus/title_screen.gd" type="Script" id=1]
[ext_resource path="res://gui/themes/menu_theme.tres" type="Theme" id=2]
[ext_resource path="res://menus/TitleLogo.png" type="Texture" id=3]
[ext_resource path="res://fonts/PressStart2P/PressStart2P-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://menus/MM_TT-TitleScreen.ogg" type="AudioStream" id=5]
[ext_resource path="res://effects/FadeEffects.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 4 )

[node name="TitleScreen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 30
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 37.0
margin_top = 30.0
margin_right = 219.0
margin_bottom = 204.0
size_flags_horizontal = 4
theme = ExtResource( 2 )

[node name="Logo" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 182.0
margin_bottom = 101.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.8
texture = ExtResource( 3 )

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 182.0
margin_bottom = 113.0
custom_constants/separation = 7
alignment = 1

[node name="StartLabel" type="Label" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 71.0
margin_right = 111.0
margin_bottom = 8.0
size_flags_horizontal = 4
text = "START"
align = 1

[node name="Info" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 182.0
margin_bottom = 174.0
size_flags_vertical = 10
custom_fonts/font = SubResource( 1 )
text = "Molten Gears 2019
Made with Godot Engine"
align = 1

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="FadeEffects" parent="." instance=ExtResource( 6 )]
visible = false
